<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layoutPadding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/layoutPadding"
            android:src="@drawable/note" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/layoutPadding"
            android:text="@string/playing_now"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/titleTextSize"
            android:textStyle="bold" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/layoutPadding">

                <TextView
                    android:id="@+id/name"
                    style="@style/songStyleII"
                    android:text="@string/songTitle" />

                <TextView
                    android:id="@+id/singer"
                    style="@style/songStyleII"
                    android:paddingLeft="@dimen/listPadding"
                    android:paddingStart="@dimen/listPadding"
                    android:text="@string/songSinger" />

                <TextView
                    android:id="@+id/album"
                    style="@style/songStyleII"
                    android:paddingLeft="@dimen/listPadding"
                    android:paddingStart="@dimen/listPadding"
                    android:text="@string/songAlbum" />

                <TextView
                    android:id="@+id/duration"
                    style="@style/songStyleII"
                    android:paddingLeft="@dimen/listPadding"
                    android:paddingStart="@dimen/listPadding"
                    android:text="@string/songDuration" />
            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/layoutPadding">

            <Button
                android:id="@+id/previousSongButton"
                android:layout_width="@dimen/smallButton"
                android:layout_height="@dimen/smallButton"
                android:background="@drawable/circle_button"
                android:drawableEnd="@drawable/fast_rewind_small"
                android:drawableRight="@drawable/fast_rewind_small"/>

            <Button
                android:id="@+id/playNPauseButton"
                android:layout_width="@dimen/largeButton"
                android:layout_height="@dimen/largeButton"
                android:layout_marginLeft="@dimen/playButtonPadding"
                android:layout_marginRight="@dimen/playButtonPadding"
                android:background="@drawable/circle_button"
                android:drawableEnd="@drawable/play_small"
                android:drawableRight="@drawable/play_small"/>

            <Button
                android:id="@+id/nextSongButton"
                android:layout_width="@dimen/smallButton"
                android:layout_height="@dimen/smallButton"
                android:background="@drawable/circle_button"
                android:drawableEnd="@drawable/fast_forward_small"
                android:drawableRight="@drawable/fast_forward_small"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>